--- a/Course/res/menu/map_menu.xml
+++ b/Course/res/menu/map_menu.xml
@@ -4,22 +4,26 @@
     
     <item 
         android:id="@+id/showCurrentLocation"
-        android:title="@string/current_location"
+        android:title="@string/show_current"
         android:showAsAction="ifRoom"/>
     
     <item 
         android:id="@+id/mapTypeNormal"
-        android:title="@string/menu_normal"/>
+        android:title="@string/menu_normal"
+    	android:showAsAction="never"/>
     
     <item 
         android:id="@+id/mapTypeSatellite"
-        android:title="@string/menu_satellite"/>
+        android:title="@string/menu_satellite"
+        android:showAsAction="never"/>
     
     <item 
         android:id="@+id/mapTypeTerrain"
-        android:title="@string/menu_terrain"/>
+        android:title="@string/menu_terrain"
+		android:showAsAction="never"/>
 
     <item 
         android:id="@+id/mapTypeHybrid"
-        android:title="@string/menu_hybrid"/>
+        android:title="@string/menu_hybrid"
+        android:showAsAction="never"/>
 </menu>
