--- a/Course/res/layout/activity_main.xml
+++ b/Course/res/layout/activity_main.xml
@@ -1,31 +1,28 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".MainActivity" >
-
-    <TextView
-        android:id="@+id/textView1"
+    tools:context=".MainActivity"
+    android:orientation="horizontal" >
+    
+    <EditText android:id="@+id/start_run"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+         android:layout_weight="1"
+        android:hint="@string/enter_run_name">
+        
+    </EditText>
+    
+        <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:clickable="true"
-        android:onClick="findCoordinates"
-        android:text="@string/hello_world"
-        android:textSize="14sp" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/textView1"
-        android:layout_below="@+id/textView1"
-        android:layout_marginTop="44dp"
-        android:onClick="findCoordinates"
-        android:text="@string/button_get_location"
-        android:textSize="14sp" />
-
-</RelativeLayout>
+        android:text="@string/button_draw_map"
+        android:onClick="openMap"/>
+        
+        
+  
+</LinearLayout>
