Added detail view for each point on the map

--- a/Course/res/menu/map_menu.xml
+++ b/Course/res/menu/map_menu.xml
@@ -5,7 +5,12 @@
     <item 
         android:id="@+id/showCurrentLocation"
         android:title="@string/show_current"
-        android:showAsAction="ifRoom"/>
+        android:showAsAction="never"/>
+    
+        <item 
+        android:id="@+id/updateMapCamera"
+        android:title="@string/stay_put"
+        android:showAsAction="never"/>
     
     <item 
         android:id="@+id/mapTypeNormal"
