--- a/Course/res/menu/main.xml
+++ b/Course/res/menu/main.xml
@@ -4,12 +4,11 @@
         android:id="@+id/action_settings"
         android:orderInCategory="100"
         android:showAsAction="never"
-        android:title="@string/action_settings"/>
-
-    <item 
-        android:id="@+id/action_home"
-        android:icon="@drawable/ic_home"
-        android:title="@string/action_home"
-        android:showAsAction="ifRoom"
-        />
+        android:title="@string/action_settings">
+        
+        <menu>
+            <item android:id="@+id/item1" android:title="Exit" android:titleCondensed="Exit" android:onClick="exitApp"/>
+        </menu>
+        
+    </item>
 </menu>
