added a finish button to DrawMap which takes you to a new activity which shows run statistics. Also changed the background to black. Black is a nice color.

--- a/Course/res/layout/activity_run_statistics.xml
+++ b/Course/res/layout/activity_run_statistics.xml
@@ -6,26 +6,29 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".MainActivity"
-    android:orientation="horizontal" 
-    android:background="#000000">
+    tools:context=".RunStatistics" 
+    android:id = "@+id/graph"
+    android:orientation="vertical"
+    android:background = "#000000">
     
-    <EditText android:id="@+id/start_run"
-        android:layout_width="0dp"
+    <LinearLayout
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-         android:layout_weight="1"
-        android:hint="@string/enter_run_name"
-        android:textColor="#CCFFFF"
-        android:textColorHint="#CCFFFF">
+        android:orientation="horizontal">
         
-    </EditText>
-    
         <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/button_draw_map"
-        android:onClick="openMap"/>
+        android:text="@string/button_graph_altitude"
+        android:onClick="graphAltitude"/>
         
-        
-  
+        <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/button_graph_speed"
+        android:onClick="graphSpeed"/>
+            
+    </LinearLayout>
+    
+    
 </LinearLayout>
