--- a/Course/res/menu/map_menu.xml
+++ b/Course/res/menu/map_menu.xml
@@ -43,5 +43,10 @@
         android:orderInCategory="100"
         android:showAsAction="never"
         android:title="@string/menu_hybrid"/>
+    <item
+        android:id="@+id/doneButton"
+        android:orderInCategory="101"
+        android:showAsAction="ifRoom"
+        android:title="@string/finished"/>
 
 </menu>
