--- a/Course/res/layout/info_window.xml
+++ b/Course/res/layout/info_window.xml
@@ -8,7 +8,7 @@
         android:id="@+id/imageView1"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:src="@drawable/ic_launcher"
+        android:src="@drawable/ic_location"
         android:contentDescription="@string/map_info" />
 
     <LinearLayout
