--- a/Course/res/menu/main.xml
+++ b/Course/res/menu/main.xml
@@ -2,18 +2,18 @@
 
     <item
         android:id="@+id/action_settings"
+        android:orderInCategory="99"
+        android:showAsAction="never"
+        android:title="Settings"/>
+    <item
+        android:id="@+id/action_license"
         android:orderInCategory="100"
         android:showAsAction="never"
-        android:title="Settings">
-        <menu>
-            <item android:id="@+id/item1" android:title="Exit" android:titleCondensed="Exit" android:onClick="exitApp"/>
-        </menu>
-        
-    </item>
-    <item 
-        android:id="@+id/action_home"
-        android:icon="@drawable/ic_home"
-        android:title="@string/action_home"
-        android:showAsAction="ifRoom"
-        />
+        android:title="@string/gp_license"/>
+    <item
+        android:id="@+id/item1"
+        android:onClick="exitApp"
+        android:title="Exit"
+        android:titleCondensed="Exit"/>
+
 </menu>
