--- a/Course/res/menu/main.xml
+++ b/Course/res/menu/main.xml
@@ -1,19 +1,20 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
 
     <item
-        android:id="@+id/action_settings"
-        android:orderInCategory="99"
+        android:id="@+id/action_use_metric"
+        android:orderInCategory="98"
         android:showAsAction="never"
-        android:title="Settings"/>
+        android:title="@string/use_imperial"/>
     <item
         android:id="@+id/action_license"
-        android:orderInCategory="100"
+        android:orderInCategory="99"
         android:showAsAction="never"
         android:title="@string/gp_license"/>
     <item
         android:id="@+id/item1"
+        android:orderInCategory="100"
         android:onClick="exitApp"
-        android:title="Exit"
-        android:titleCondensed="Exit"/>
+        android:title="@string/quitApp"
+        android:titleCondensed="@string/quitApp"/>
 
 </menu>
