--- a/Course/res/layout/activity_main.xml
+++ b/Course/res/layout/activity_main.xml
@@ -17,13 +17,13 @@
         android:layout_marginLeft="4dp"
         android:layout_marginTop="4dp"
         android:text="@string/new_run_name"
-        android:textSize="20sp"
+        android:textSize="@dimen/big_text"
         android:textColor="#CCFFFF" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
+        android:layout_marginBottom="20dp"
         android:orientation="horizontal" >
 
         <EditText
@@ -33,6 +33,7 @@
             android:layout_weight="1"
             android:hint="@string/enter_run_name"
             android:textColor="#CCFFFF"
+            android:textSize="@dimen/big_text"
             android:textColorHint="#AAAAAA" >
         </EditText>
 
@@ -42,6 +43,7 @@
             android:layout_height="wrap_content"
             android:onClick="openNewMap"
             android:text="@string/button_draw_map"
+            android:textSize="@dimen/big_text"
             android:textColor="#CCFFFF" />
     </LinearLayout>
     
@@ -53,13 +55,13 @@
         android:layout_marginLeft="4dp"
         android:layout_marginTop="4dp"
         android:text="@string/compare_run_name"
-        android:textSize="20sp"
+        android:textSize="@dimen/big_text"
         android:textColor="#CCFFFF" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
+        android:layout_marginBottom="20dp"
         android:orientation="horizontal" >
 
         <EditText
@@ -68,6 +70,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:hint="@string/enter_run_name"
+            android:textSize="@dimen/big_text"
             android:textColor="#CCFFFF"
             android:textColorHint="#AAAAAA" >
         </EditText>
@@ -78,6 +81,7 @@
             android:layout_height="wrap_content"
             android:onClick="openCompeteAndRunMap"
             android:text="@string/button_draw_map"
+            android:textSize="@dimen/big_text"
             android:textColor="#CCFFFF" />
     </LinearLayout>
 
@@ -86,6 +90,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/view_run_name"
+        android:textSize="@dimen/big_text"
         android:onClick="openCompeteMap"
         android:textColor="#CCFFFF" />
 
