--- a/Course/res/values/dimens.xml
+++ b/Course/res/values/dimens.xml
@@ -3,5 +3,8 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">8dp</dimen>
     <dimen name="activity_vertical_margin">8dp</dimen>
+    <dimen name="list_horizontal_margin">20dp</dimen>
+    <dimen name="list_vertical_margin">10dp</dimen>
+    <dimen name="big_text">22sp</dimen>
 
 </resources>
