--- a/Course/res/menu/main.xml
+++ b/Course/res/menu/main.xml
@@ -2,18 +2,23 @@
 
     <item
         android:id="@+id/action_use_metric"
-        android:orderInCategory="98"
+        android:orderInCategory="97"
         android:showAsAction="never"
         android:title="@string/use_imperial"/>
     <item
         android:id="@+id/action_license"
-        android:orderInCategory="99"
+        android:orderInCategory="98"
         android:showAsAction="never"
         android:title="@string/gp_license"/>
     <item
-        android:id="@+id/item1"
-        android:orderInCategory="100"
+        android:id="@+id/action_delete"
+        android:orderInCategory="99"
+        android:showAsAction="never"
+        android:title="@string/deleteMenuName"/>
+    <item
+        android:id="@+id/action_exit"
         android:onClick="exitApp"
+        android:orderInCategory="100"
         android:title="@string/quitApp"
         android:titleCondensed="@string/quitApp"/>
 
