Changed GPLicense background and text colors

--- a/Course/res/layout/activity_gplicense.xml
+++ b/Course/res/layout/activity_gplicense.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#000000"
     android:padding="10dp" >
 
     <TextView
@@ -10,6 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Google Play License"
+        android:textColor="#CCFFFF"
         tools:ignore="HardcodedText" />
 
 </ScrollView>
